--- a/templates/compras/index_compras.html
+++ b/templates/compras/index_compras.html
@@ -38,7 +38,7 @@
     
 
 <div class="col-md-3 col-sm-6 col-xs-12">
-    <a href="#">
+    <a href="{% url 'compras:orden_listar' %}">
         <div class="info-box bg-green">
             <span class="info-box-icon"><i class="glyphicon glyphicon-shopping-cart"></i></span>
 
