--- a/templates/compras/listar_ordenes.html
+++ b/templates/compras/listar_ordenes.html
@@ -1,135 +1,128 @@
 {% extends 'base.html' %}
+{% load humanize %}
 
 {% block miga_pan %}
-  <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-  <li><a href="#">Compras</a></li>
-  <li class="active">Solicitudes de Compra</li>
-  <li class="active">Cotizaciones</li>
+<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+<li><a href="{% url 'compras:index' %}">Compras</a></li>
+<li class="active">Ordenes de Compra</li>
 {% endblock miga_pan %}
+
+{% block titulo_pagina %}
+Ordenes de Compra
+{% endblock titulo_pagina %}
+
+{% block titulo %}Gestión de Ordenes de compra {% endblock titulo %}
 
 {% block contenido %}
 <div class="content-wrapper">
   <!-- Main content -->
-  <section class="box">          
+  <section class="box">
     <div class="col-md-12">
       <!-- general form elements -->
-      <div class="box box-primary">            
+      <div class="box box-primary">
         <!-- /.box-header -->
         <!-- form start -->
         <form role="form">
           <div class="box-body">
-            <!-- Panel colapsable --> 
-            <div class="container col-md-12">   
-              <div class="form-group row">
-                <div class="col-xs-6">
-                  <label for="inputNombre">Nombre</label>
-                  <input type="text" class="form-control" id="inputNombre" 
-                    placeholder={{usario.nombre}} disabled>
-                </div>
+            <!-- Panel colapsable -->
+            <div class="container col-md-12">
 
-                <div class="col-xs-3">
-                  <label for="inputId">Identificación</label>
-                  <input type="text" class="form-control" id="inputId" disabled
-                    placeholder={{usuario.codigo}}>
-                </div>
-
-                <div class="col-xs-3">
-                  <label for="inputNombre">Cargo</label>
-                  <input type="text" class="form-control" id="inputNombre" disabled
-                    placeholder={{usuario.rol}}>
-                </div>
-              </div> 
-                            
               <div class="tab-content">
-                {% if cotizaciones %}
-                {% for cotizacion in cotizaciones %}
-                <div id="cotizaciones" class="tab-pane fade in active">                      
-                  <div class="panel-group" id="accordion">  
-                    <div class="panel panel-default">                                                                      
+                {% if object_list %}
+                {% for orden in object_list %}
+                <div id="ordenes" class="tab-pane fade in active">
+                  <div class="panel-group" id="accordion">
+                    <div class="panel panel-default">
                       <div class="panel-heading">
-                        <h3 class="panel-title">Orden de Compra #{{ordencompra.codigo}}</h3>                  
+                        <h3 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#acordion" href="#collapse{{orden.id}}">
+                            Orden de Compra #{{orden.id}}
+                          </a>
+                          {% if orden.estado_aprobacion == 'pendiente' %}
+                          <i class="fa fa-circle text-grey"></i> <!-- cambia color con el estado_aprobacion -->
+                          {% elif orden.estado_aprobacion == 'rechazada' %}
+                          <i class="fa fa-circle text-red"></i> <!-- cambia color con el estado -->
+                          {% elif orden.estado_aprobacion == 'aprobado_gerente' %}
+                          <i class="fa fa-circle text-green"></i> <!-- cambia color con el estado -->
+                          {% endif %}
+                          {% if usuario.rol == 'gerente' and orden.estado_aprobacion == 'pendiente' %}
+                          <a style="display: inline" href="{% url 'compras:autorizar_orden' orden.id %}" class="btn btn-primary">Aprobar Orden</a>
+                          <a style="display: inline" href="{% url 'compras:rechazar_orden' orden.id %}" class="btn btn-danger">Rechazar Orden</a>
+                          {% endif %}
+                        </h3>
                       </div>
 
-                      <div class="form-group">
+                      <div id="collapse{{orden.id}}" class="panel-collapse collapse">
                         <div class="form-group row">
                           <div class="col-xs-6">
                             <label for="inputNombre">Nombre Proveedor</label>
-                            <input type="text" class="form-control" id="inputNombre" disabled
-                              placeholder={{proveedor.nombre}}> 
+                            <input type="text" class="form-control" id="inputNombre" disabled value="{{orden.cotizacion.proveedor.nombre}}">
                           </div>
 
                           <div class="col-xs-3">
                             <label for="inputId">Identificación</label>
-                            <input type="text" class="form-control" id="inputId" disabled
-                              placeholder={{proveedor.codigo}}>
-                          </div>                          
+                            <input type="text" class="form-control" id="inputId" disabled value="{{orden.cotizacion.proveedor.email}}">
+                          </div>
                         </div>
 
                         <div class="form-group">
-                            <div class="form-group">
-                                <label for="inputElemento">Elemento</label>
-                                <input type="text" class="form-control" id="inputElemento" disabled
-                                    placeholder={{articulo.nombre}}>
-                            </div>                        
+                          <div class="col-xs-6">
+                            <label for="inputElemento">Elemento</label>
+                            <input type="text" class="form-control" id="inputElemento" disabled value="{{orden.cotizacion.solicitud.articulo.nombre}}">
+                          </div>
 
-                            <div class="form-group">
-                                <label for="inputCantidad">Cantidad</label>
-                                <input type="text" class="form-control" id="inputCantidad" disabled
-                                    placeholder={{articuloscotizacion.cantidad}}>
-                            </div>
+                          <div class="col-xs-3">
+                            <label for="inputCantidad">Cantidad</label>
+                            <input type="text" class="form-control" id="inputCantidad" disabled value="{{orden.cotizacion.solicitud.cantidad}}">
+                          </div>
                         </div>
 
                         <div class="form-group row">
-                            <div class="form-group col-xs-6">
-                                <label for="datepicker">Fecha realizada</label>                  
-                                <!-- Date -->                              
-                                <input type="text" class="form-control pull-right" id="datepicker" disabled
-                                    placeholder={{ordencompra.fecha_realizada}}>
-                            </div>
+                          <div class="form-group col-xs-6">
+                            <label for="datepicker">Fecha realizada</label>
+                            <!-- Date -->
+                            <input type="text" class="form-control pull-right" id="datepicker" disabled value="{{orden.fecha_realizada}}">
+                          </div>
 
-                            <div class="form-group col-xs-6">
-                                <label for="datepicker">Fecha esperada</label>                  
-                                <!-- Date -->                              
-                                <input type="text" class="form-control pull-right" id="datepicker" disabled
-                                placeholder={{ordencompra.fecha_esperada}}>
-                            </div>
+                          <div class="form-group col-xs-6">
+                            <label for="datepicker">Fecha esperada</label>
+                            <!-- Date -->
+                            <input type="text" class="form-control pull-right" id="datepicker" disabled value="{{orden.fecha_esperada}}">
+                          </div>
                         </div> <!-- group row -->
 
-                        <div class="form-group row">                              
+                        <div class="form-group row">
                           <div class="form-group col-xs-6">
                             <label for="inputValorU">Valor unidad $</label>
-                            <input type="text" class="form-control" id="inputValorU" disabled
-                              placeholder={{articuloscotizacion.precio}}>
-                          </div> 
+                            <input type="text" class="form-control" id="inputValorU" disabled value="{{orden.cotizacion.total}}">
+                          </div>
 
                           <div class="form-group col-xs-6">
-                            <label for="inputValorT">Valor Total $</label>       
-                            <input type="text" class="form-control pull-right" id="inputValorT" disabled
-                              placeholder={{cotizacion.total}}>
-                          </div>                            
-                        </div> 
-                        
-                      </div> <!--collapse-->   
-                    </div> <!--panel-->
+                            <label for="inputValorT">Valor Total $</label>
+                            <input type="text" class="form-control pull-right" id="inputValorT" disabled value="{% widthratio orden.cotizacion.total 1 orden.cotizacion.solicitud.cantidad|intcomma %}">
+                          </div>
+                        </div>
 
-                    <div class="box-footer text-center">
-                      <a href="{% url 'compras:ordencompra_crear' %}" class="btn btn-success">Nueva Orden de Compra</a>
-                      <a href="{% url 'compras:ordencompra_modificar' %}" class="btn btn-primary">Modificar Orden de Compra</a>                      
-                    </div> 
-                  </div> <!--accordion-->
-                {% endfor %}
-                {% else %}
-                  <h3>No hay cotizaciones</h3>
-                {% endif %}
-                </div>                                
-              </div> <!--tab content-->
+                      </div>
+                      <!--collapse-->
+                    </div>
+                    <!--panel-->
+                  </div>
+                  <!--accordion-->
+                  {% endfor %}
+                  {% else %}
+                  <h3>No hay ordenes de compra</h3>
+                  {% endif %}
+                </div>
+              </div>
+              <!--tab content-->
             </div>
-          </div> <!-- /.box-body -->            
+          </div> <!-- /.box-body -->
         </form>
         <!-- /.box-body -->
       </div>
       <!-- /.box -->
-    </div>                  
+    </div>
   </section>
   <!-- /.content -->
 </div>
