--- a/templates/inventario/landing.html
+++ b/templates/inventario/landing.html
@@ -9,6 +9,13 @@
 {% block titulo %} Inventario{% endblock titulo %}
 {% block titulo_pagina %}Dashboard{% endblock titulo_pagina %}
 
+
+{% block miga_pan %}
+
+  <li><a href="/inventario"><i class="fa fa-dashboard"></i> Dashboard Inventario</a></li>
+
+{% endblock miga_pan %}
+
 {% block contenido_panel %}
 
 <a href="/inventario/entradas">
