--- a/templates/control_bar.html
+++ b/templates/control_bar.html
@@ -103,7 +103,7 @@
               <!-- The user image in the navbar-->
               <!--<img src="dist/img/user-160x160.jpg" class="user-image" alt="User Image">-->
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">Thanh Nguyen</span>
+              <span class="hidden-xs">Jefe de Bodega</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
