--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,7 +10,7 @@
         <img src="dist/img/user-160x160.jpg" class="img-circle" alt="User Image">
       </div>-->
       <div class="pull-left info">
-        <p>Encargado de Inventario</p>
+        <p>Jefe de Bodega</p>
         <!-- Status -->
         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
       </div>
