--- a/templates/compras/index_compras.html
+++ b/templates/compras/index_compras.html
@@ -16,14 +16,14 @@
             <div class="info-box-content">
                 <span class="info-box-text">Solicitudes de Compra</span>
                 <!-- TODO: Contar las solicitudes -->
-                <span class="info-box-number">4</span>
+                <span class="info-box-number">5</span>
 
                 <!-- TODO: Ver que progreso se puede medir -->
                 <div class="progress">
-                    <div class="progress-bar" style="width: 70%"></div>
+                    <div class="progress-bar" style="width: 100%"></div>
                 </div>
                 <span class="progress-description">
-                    Solicitudes aprobadas:
+                    Solicitudes aprobadas: 1
                 </span>
             </div>
             <!-- /.info-box-content -->
@@ -45,14 +45,14 @@
             <div class="info-box-content">
                 <span class="info-box-text">Ordenes de Compra</span>
                 <!-- TODO: Contar las ordenes -->
-                <span class="info-box-number">41</span>
+                <span class="info-box-number">0</span>
 
                 <!-- TODO: Ver que progreso se puede medir -->
                 <div class="progress">
-                    <div class="progress-bar" style="width: 70%"></div>
+                    <div class="progress-bar" style="width: 100%"></div>
                 </div>
                 <span class="progress-description">
-                    Ordenes completadas: 22
+                    Ordenes completadas: 
                 </span>
             </div>
             <!-- /.info-box-content -->
