--- a/templates/menu.html
+++ b/templates/menu.html
@@ -20,19 +20,10 @@
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">HEADER</li>
       <!-- Optionally, you can add icons to the links -->
-      <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-      <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
-      <li class="treeview">
-        <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
-          <span class="pull-right-container">
-            <i class="fa fa-angle-left pull-right"></i>
-          </span>
-        </a>
-        <ul class="treeview-menu">
-          <li><a href="#">Link in level 2</a></li>
-          <li><a href="#">Link in level 2</a></li>
-        </ul>
-      </li>
+      <li class="active"><a href="{% url 'compras:index' %}"><i class="fa fa-link"></i> <span>Compras</span></a></li>
+      <li><a href="{% url 'compras:solicitudes' %}"><i class="fa fa-link"></i> <span>Solicitudes de compra</span></a></li>
+      <li><a href="{% url 'compras:orden_listar' %}"><i class="fa fa-link"></i> <span>Ordenes de compra</span></a></li>
+
     </ul>
     <!-- /.sidebar-menu -->
   </section>
