validaciones, templates y organizacion archivos

--- a/apps/usuarios/templates/usuarios/home.html
+++ b/apps/usuarios/templates/usuarios/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% load bootstrap3 %}
+
 {% block titulo %}Dashboard{% endblock titulo %}
 {% block titulo_pagina %}Dashboard{% endblock titulo_pagina %}
 {% block miga_pan %}
@@ -8,60 +9,28 @@
 
 {% block contenido %}
 
-<div class="row">
-{% if perms.usuarios %}
-        <div class="col-md-4">
-
-        <div class="box box-widget widget-user-2">
-
-            <div class="widget-user-header bg-yellow">
-                <h3 class="widget-user-username">Módulo de usuarios</h3>
-                <h5 class="widget-user-desc">Gestión de usuarios</h5>
-            </div>
-
-            <div class="box-footer no-padding">
-                <ul class="nav nav-stacked">
-
-                    {% if perms.usuarios.add_usuario %}
-                    <li><a href="{% url 'usuarios:crear_usuario' %}">Crear usuario <span class="pull-right badge bg-blue"><i class="fa fa-user-plus"></i></span></a></li>
-                    {% endif %}
-
-                    {% if 'usuarios.change_usuario' in perms %}
-                    <li><a href="{% url 'usuarios:consultar_usuarios' %}">Consultar usuarios <span class="pull-right badge bg-green"><i class="fa fa-search"></i></span></a></li>
-                    {% endif %}
-
-                    {% if perms.usuarios.add_cargo %}
-                    <li><a href="{% url 'usuarios:crear_cargo' %}">Crear cargo <span class="pull-right badge bg-blue"><i class="fa fa-users"></i></span></a></li>
-                    {% endif %}
-
-                    {% if perms.usuarios.view_cargos %}
-                    <li><a href="{% url 'usuarios:consultar_cargos' %}">Consultar cargos <span class="pull-right badge bg-green"><i class="fa fa-search"></i></span></a></li>
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
-    </div>
-{% endif %}
-</div>
+	<div class="row">
+		{% include 'usuarios/modulos/usuarios.html' %}
+	</div>
 
 
-{% if user.is_superuser %}
-{% else %}
-<div class="col-md-12">
-    <div class="box box-primary">
-        <div class="box-header">
-            <h3 class="box-title">Permisos asignados</h3>
-            <div class="ripple-container"></div>
-        </div>
-        <div class="box-body">
-            <ul>
-                {% for permiso in user.cargo.permissions.all %}
-                <li>{{ permiso.name }}</li>
-                {% endfor %}
-            </ul>
-        </div>
-    </div>
-</div>
-{% endif %}
+	{% if user.is_superuser %}
+	{% else %}
+		<div class="col-md-12">
+			<div class="box box-primary">
+				<div class="box-header">
+					<h3 class="box-title">Permisos asignados</h3>
+					<div class="ripple-container"></div>
+				</div>
+				<div class="box-body">
+					<ul>
+						{% for permiso in user.cargo.permissions.all %}
+							<li>{{ permiso.name }}</li>
+						{% endfor %}
+					</ul>
+				</div>
+			</div>
+		</div>
+	{% endif %}
 
 {% endblock contenido %}
