--- a/templates/menu.html
+++ b/templates/menu.html
@@ -13,7 +13,7 @@
     </div>
 
     <ul class="sidebar-menu" data-widget="tree">
-      {% include 'menu_usuarios.html' %}
+      {% include 'menus/menu_usuarios.html' %}
     </ul>
 
   </section>
