--- a/templates/menus/menu_usuarios.html
+++ b/templates/menus/menu_usuarios.html
@@ -16,4 +16,4 @@
 </li>
 {% endif %}
 <li class="header">CUENTA</li>
-<li class="active"><a href="{% url 'usuarios:editar_password' %}"><i class="fa fa-key"></i> <span>Editar password</span></a></li>
+<li class="active"><a href="{% url 'usuarios:editar_password' %}"><i class="fa fa-key"></i> <span>Editar Contraseña</span></a></li>
