--- a/apps/usuarios/templates/usuarios/editar_password.html
+++ b/apps/usuarios/templates/usuarios/editar_password.html
@@ -2,28 +2,35 @@
 {% load staticfiles %}
 {% load bootstrap3 %}
 
-{% block titulo_pagina %}Editar Contraseña{% endblock titulo_pagina %}
 {% block titulo %}Editar Contraseña{% endblock titulo %}
 {% block miga_pan %}
-<li><a href="{% url 'usuarios:home'%}"><i class="fa fa-dashboard"></i> DASHBOARD</a></li>
-<li class="active">EDITAR CONTRASEÑA</li>
+	<li><a href="{% url 'usuarios:home' %}"><i class="fa fa-dashboard"></i> DASHBOARD</a></li>
+	<li class="active">EDITAR CONTRASEÑA</li>
 {% endblock miga_pan %}
 
-{% block contenido_panel %}
+{% block contenido %}
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+			<div class="box box-primary">
+				<div class="box-header">
+					<h3 class="box-title">Editar Contraseña</h3>
+				</div>
+				<div class="box-body">
+					<form method="post" role="form"> {% csrf_token %}
 
-<form method="post" role="form">
-    {% csrf_token %}
+						{% bootstrap_field form.old_password %}
+						{% bootstrap_field form.new_password1 show_help=False %}
+						{% bootstrap_field form.new_password2 %}
 
-    {% bootstrap_form form %}
-
-        {% for field in form %}
-        {% for error in field.errors %}
-            <p style="color: red">{{ error }}</p>
-        {% endfor %}
-    {% endfor %}
-
-{% endblock contenido_panel %}
-{% block pie_panel %}
-    <button type="submit" class="btn btn-raised btn-success">Guardar Contraseña</button>
-</form>
-{% endblock pie_panel %}
+						{% for field in form %}
+							{% for error in field.errors %}
+								<p style="color: red">{{ error }}</p>
+							{% endfor %}
+						{% endfor %}
+						<button type="submit" class="btn btn-raised btn-success">Guardar Contraseña</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+{% endblock contenido %}
