--- a/apps/evaluaciones/templates/registrar_evaluaciones.html
+++ b/apps/evaluaciones/templates/registrar_evaluaciones.html
@@ -33,6 +33,74 @@
                 <br>Fecha de evaluación: {{ evaluacion.date }}
                 <br>
                 <br>Colaborador: {{ evaluacion.employee | upper}}
+
+
+                <div class="row">
+                    <div class="col-lg-3 col-6">
+                        <!-- small box -->
+                        <div class="small-box bg-info">
+                            <div class="inner">
+                                <h3>{{ puntuacion }}</h3>
+
+                                <p>Puntuación</p>
+                            </div>
+                            <div class="icon">
+                                <i class="ion ion-bag"></i>
+                            </div>
+
+                        </div>
+                    </div>
+                    <!-- ./col -->
+                    <div class="col-lg-3 col-6">
+                        <!-- small box -->
+                        <div class="small-box bg-success">
+                            <div class="inner">
+                                <h3>{{ mayor }}<sup style="font-size: 20px"></sup></h3>
+
+                                <p>Mayor resultado</p>
+                            </div>
+                            <div class="icon">
+                                <i class="ion ion-stats-bars"></i>
+                            </div>
+
+                        </div>
+                    </div>
+                    <!-- ./col -->
+                    <div class="col-lg-3 col-6">
+                        <!-- small box -->
+                        <div class="small-box bg-warning">
+                            <div class="inner">
+                                <h3>{{ menor }}</h3>
+
+                                <p>Menor resultado</p>
+                            </div>
+                            <div class="icon">
+                                <i class="ion ion-person-add"></i>
+                            </div>
+
+                        </div>
+                    </div>
+                    <!-- ./col -->
+                    <div class="col-lg-3 col-6">
+                        <!-- small box -->
+                        <div class="small-box bg-danger">
+                            <div class="inner">
+                                <h3>{{ promedio }}</h3>
+
+                                <p>Promedio de puntuación</p>
+                            </div>
+                            <div class="icon">
+                                <i class="ion ion-pie-graph"></i>
+                            </div>
+
+                        </div>
+                    </div>
+                    <!-- ./col -->
+                </div>
+                <!-- /.row -->
+
+
+
                 <br> Preguntas:
                 <br>
                 {% for formulario in formset %}
