--- a/apps/employees_and_jobs/templates/register_employee.html
+++ b/apps/employees_and_jobs/templates/register_employee.html
@@ -65,7 +65,7 @@
                         {% bootstrap_field form.severance_fund %}
                     </div>
                     <div class="col-md-6">
-                        {% bootstrap_field form.cargo %}
+                        {% bootstrap_field form.salary %}
                     </div>
                 </div>
                 <div class="row">
@@ -78,12 +78,18 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        {% bootstrap_field form.salary %}
+                        {% bootstrap_field form.cargo %}
                     </div>
                     <div class="col-md-6">
+                        {% bootstrap_field form.jefe %}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
                         {% bootstrap_field form.status %}
                     </div>
                 </div>
+
             </div>
             <!-- /.box-body -->
             <div class="box-footer">
